--- a/templates/forms.html
+++ b/templates/forms.html
@@ -12,19 +12,19 @@ to complete an onboarding or offboarding form for new or leaving employees.  -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ECS Forms</title> <!-- Title of the app that is shown in the tab -->
+    <title>ECS Jira | Forms</title> <!-- Title of the app that is shown in the tab -->
 
     <!-- import the css file for the desgin -->
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/forms.css') }}">
 </head>
 
-<!-- HTML body is the area for the user interface, UI.
+<!-- HTML <body> is the area for the user interface, UI.
      Here is where you design the UI however you please. Throughout the body you 
      will see many 'div' objects that have attributes such as "class", "id", "style", "onclick" etc. 
-     These atributes can be used for all objects to give it a name that can be refrenced or called
+     These atributes can be used to name all objects so they can be refrenced or called
      later using Javascript.
      
-     An example that requires a call would be to get the value of a text field: 
+     An example that requires a call and an attribute would be to get the value of a text field: 
     ----------------------------------------------------------------------------------------------
      HTML:
      <div>
